--- a/app_i/src/main/res/layout/activity_notification_list.xml
+++ b/app_i/src/main/res/layout/activity_notification_list.xml
@@ -37,7 +37,9 @@ tools:context=".MainActivity">
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="NotificationListenerService Example"
+        android:text="notification列表"
+        android:gravity="left"
+        android:textSize="8dp"
         android:id="@+id/textView" />
 
 </ScrollView>
