--- a/app_i/src/main/res/layout/activity_noti_details.xml
+++ b/app_i/src/main/res/layout/activity_noti_details.xml
@@ -8,11 +8,11 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:dividerHeight="1dp" />
-    <Button
-        android:id="@+id/btnBack"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginTop="20dp"
-        android:text="Back" />
+<!--    <Button-->
+<!--        android:id="@+id/btnBack"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_gravity="center"-->
+<!--        android:layout_marginTop="20dp"-->
+<!--        android:text="Back" />-->
 </LinearLayout>
