--- a/app_i/src/main/res/layout/activity_notification_list.xml
+++ b/app_i/src/main/res/layout/activity_notification_list.xml
@@ -1,55 +1,64 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-xmlns:tools="http://schemas.android.com/tools"
-android:layout_width="match_parent"
-android:layout_height="match_parent"
-android:paddingLeft="@dimen/activity_horizontal_margin"
-android:paddingRight="@dimen/activity_horizontal_margin"
-android:paddingTop="@dimen/activity_vertical_margin"
-android:paddingBottom="@dimen/activity_vertical_margin"
-tools:context=".MainActivity">
-
-<Button
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:text="Create Notification"
-    android:id="@+id/btnCreateNotify"
-    android:layout_alignParentTop="true"
-    android:layout_alignParentLeft="true"
-    android:layout_alignParentRight="true"/>
-
-<Button
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:text="Clear All Notification"
-    android:id="@+id/btnClearNotify"
-    android:layout_below="@+id/btnCreateNotify"
-    android:layout_alignLeft="@+id/btnCreateNotify"
-    android:layout_alignRight="@+id/btnCreateNotify" />
-
-<ScrollView android:layout_width="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_alignParentBottom="true"
-    android:layout_alignRight="@+id/btnListNotify"
-    android:layout_below="@+id/btnListNotify"
-    android:layout_alignLeft="@+id/btnListNotify">
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingTop="@dimen/activity_vertical_margin"
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    tools:context=".MainActivity">
 
-    <TextView
-        android:layout_width="match_parent"
+    <Button
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="notification列表"
-        android:gravity="left"
-        android:textSize="8dp"
-        android:id="@+id/textView" />
+        android:text="Create Notification"
+        android:id="@+id/btnCreateNotify"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentRight="true"/>
 
-</ScrollView>
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Clear All Notification"
+        android:id="@+id/btnClearNotify"
+        android:layout_below="@+id/btnCreateNotify"
+        android:layout_alignLeft="@+id/btnCreateNotify"
+        android:layout_alignRight="@+id/btnCreateNotify" />
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Catch Notification"
+        android:id="@+id/btnCatchNotify"
+        android:layout_below="@+id/btnClearNotify"
+        android:layout_alignLeft="@+id/btnClearNotify"
+        android:layout_alignRight="@+id/btnClearNotify" />
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Go to Notification List"
+        android:id="@+id/btnListNotify"
+        android:layout_below="@+id/btnCatchNotify"
+        android:layout_alignLeft="@+id/btnCatchNotify"
+        android:layout_alignRight="@+id/btnCatchNotify" />
 
-<Button
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:text="List of Notification"
-    android:id="@+id/btnListNotify"
-    android:layout_below="@+id/btnClearNotify"
-    android:layout_alignLeft="@+id/btnClearNotify"
-    android:layout_alignRight="@+id/btnClearNotify" />
+<!--<ScrollView android:layout_width="match_parent"-->
+<!--    android:layout_height="match_parent"-->
+<!--    android:layout_alignParentBottom="true"-->
+<!--    android:layout_alignRight="@+id/btnListNotify"-->
+<!--    android:layout_below="@+id/btnListNotify"-->
+<!--    android:layout_alignLeft="@+id/btnListNotify">-->
+
+<!--&lt;!&ndash;    <TextView&ndash;&gt;-->
+<!--&lt;!&ndash;        android:layout_width="match_parent"&ndash;&gt;-->
+<!--&lt;!&ndash;        android:layout_height="wrap_content"&ndash;&gt;-->
+<!--&lt;!&ndash;        android:textAppearance="?android:attr/textAppearanceMedium"&ndash;&gt;-->
+<!--&lt;!&ndash;        android:text="notification列表"&ndash;&gt;-->
+<!--&lt;!&ndash;        android:gravity="left"&ndash;&gt;-->
+<!--&lt;!&ndash;        android:textSize="8dp"&ndash;&gt;-->
+<!--&lt;!&ndash;        android:id="@+id/textView" />&ndash;&gt;-->
+
+<!--</ScrollView>-->
+
+
 </RelativeLayout>
