--- a/app_i/src/main/res/layout/activity_tmp_main.xml
+++ b/app_i/src/main/res/layout/activity_tmp_main.xml
@@ -53,7 +53,38 @@
         android:layout_gravity="left"
         android:layout_marginRight="10dp"
         android:layout_marginLeft="10dp"/>
+    <TextView
+        android:id="@+id/fourTxt"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="left"
+        android:text="Title"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"/>
 
+    <EditText
+        android:id="@+id/txtTitle"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="left"
+        android:layout_marginRight="10dp"
+        android:layout_marginLeft="10dp"/>
+    <TextView
+        android:id="@+id/fiveTxt"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="left"
+        android:text="Text"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"/>
+
+    <EditText
+        android:id="@+id/txtText"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="left"
+        android:layout_marginRight="10dp"
+        android:layout_marginLeft="10dp"/>
     <Button
         android:id="@+id/btnSave"
         android:layout_width="wrap_content"
