--- a/app_i/src/main/res/layout/activity_esm_json_view.xml
+++ b/app_i/src/main/res/layout/activity_esm_json_view.xml
@@ -7,20 +7,37 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context=".ESMJsonViewActivity">
-    <ScrollView android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_alignParentBottom="true">
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceMedium"
-            android:text="ESM ANSWER 列表"
-            android:gravity="left"
-            android:textSize="8dp"
-            android:id="@+id/ESMTextView" />
+<!--    <ScrollView android:layout_width="match_parent"-->
+<!--        android:layout_height="match_parent"-->
+<!--        android:layout_alignParentBottom="true">-->
 
-    </ScrollView>
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="ESM ANSWER 列表"
+        android:gravity="left"
+        android:textSize="8dp"
+        android:id="@+id/ESMTextView" />
+    <Button
+        android:id="@+id/btn_to_esm_db"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginTop="20dp"
+        android:layout_below="@id/ESMTextView"
+        android:text="DB ESM" />
+    <Button
+        android:id="@+id/btn_insert_esm_db"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginTop="20dp"
+        android:layout_below="@id/btn_to_esm_db"
+        android:text="INSERT TO DB" />
+<!--    </ScrollView>-->
+
 <!--    <TextView-->
 <!--        android:id="@+id/textView1"-->
 <!--        android:layout_width="wrap_content"-->
