--- a/app_i/src/main/res/layout/activity_sample_news.xml
+++ b/app_i/src/main/res/layout/activity_sample_news.xml
@@ -6,10 +6,11 @@
     android:fitsSystemWindows="true"
     android:id="@+id/layout_outside"
     android:orientation="vertical">
-    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
+    <androidx.core.widget.NestedScrollView
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/scroll_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
         <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:id="@+id/layout_inside"
@@ -20,5 +21,5 @@
 
 
         </LinearLayout>
-    </ScrollView>
+    </androidx.core.widget.NestedScrollView>
 </LinearLayout>
