--- a/app_i/src/main/res/layout/activity_sample_news.xml
+++ b/app_i/src/main/res/layout/activity_sample_news.xml
@@ -16,6 +16,8 @@
             android:id="@+id/layout_inside"
             tools:context=".SampleNewsActivity"
             android:orientation="vertical"
+            android:gravity="center_horizontal|center_vertical"
+            android:layout_gravity="center_horizontal"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
