--- a/app_i/src/main/res/layout/activity_main_news.xml
+++ b/app_i/src/main/res/layout/activity_main_news.xml
@@ -1,68 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-    <LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context=".MainActivity">
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="5dp"
-        android:text="最新新聞"
-        android:textColor="#343434"
-        android:textSize="15sp"
-        android:gravity="center_vertical" />
-
+    tools:context=".NewsMainActivity">
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/idRVItems"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent" />
 
-        android:background="#e9f0fc" />
-
-    </LinearLayout>
-
-<!--    android:layout_marginTop="10dp"-->
-    <!--        android:textAlignment="center"-->
-<!--<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"-->
-<!--xmlns:tools="http://schemas.android.com/tools"-->
-<!--xmlns:cardView="http://schemas.android.com/apk/res-auto"-->
-<!--android:id="@+id/carView"-->
-<!--android:layout_width="match_parent"-->
-<!--android:layout_height="90dp"-->
-<!--cardView:cardCornerRadius="8dp"-->
-<!--cardView:cardElevation="8dp"-->
-<!--android:layout_margin="8dp">-->
-<!--<androidx.constraintlayout.widget.ConstraintLayout-->
-<!--    android:layout_width="match_parent"-->
-<!--    android:layout_height="match_parent">-->
-<!--    &lt;!&ndash;        <ImageView&ndash;&gt;-->
-<!--    &lt;!&ndash;            android:id="@+id/image"&ndash;&gt;-->
-<!--    &lt;!&ndash;            android:scaleType="centerCrop"&ndash;&gt;-->
-<!--    &lt;!&ndash;            tools:background="@tools:sample/backgrounds/scenic"&ndash;&gt;-->
-<!--    &lt;!&ndash;            android:layout_width="90dp"&ndash;&gt;-->
-<!--    &lt;!&ndash;            android:layout_height="90dp"&ndash;&gt;-->
-<!--    &lt;!&ndash;            cardView:layout_constraintStart_toStartOf="parent"&ndash;&gt;-->
-<!--    &lt;!&ndash;            cardView:layout_constraintTop_toTopOf="parent"/>&ndash;&gt;-->
-<!--    <TextView-->
-<!--        android:id="@+id/title"-->
-<!--        android:layout_width="0dp"-->
-<!--        android:layout_height="match_parent"-->
-<!--        android:fontFamily="sans-serif-smallcaps"-->
-<!--        android:gravity="center_vertical"-->
-<!--        android:layout_margin="8dp"-->
-<!--        cardView:layout_constraintTop_toTopOf="parent"-->
-<!--        cardView:layout_constraintLeft_toRightOf="@id/image"-->
-<!--        cardView:layout_constraintRight_toRightOf="parent"-->
-<!--        cardView:layout_constraintBottom_toBottomOf="parent"-->
-<!--        android:lines="1"-->
-<!--        android:padding="5dp"-->
-<!--        android:textStyle="bold"-->
-<!--        tools:text="@tools:sample/full_names"-->
-<!--        android:textAppearance="@style/TextAppearance.AppCompat.Title"-->
-<!--        android:textColor="@android:color/black" />-->
-<!--</androidx.constraintlayout.widget.ConstraintLayout>-->
-<!--</androidx.cardview.widget.CardView>-->
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
