--- a/app_i/src/main/res/layout/rv_item.xml
+++ b/app_i/src/main/res/layout/rv_item.xml
@@ -7,7 +7,7 @@
     android:layout_marginEnd="8dp"
     android:layout_marginStart="8dp"
     android:layout_marginTop="8dp"
-    app:cardBackgroundColor="#FFFFE8">
+    app:cardBackgroundColor="#fff8e3">
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -21,7 +21,7 @@
         android:ellipsize="end"
         android:maxLines="1"
 
-        android:textSize="20dp"
+        android:textSize="18dp"
         android:text="Category Text"
         android:textColor="#343434"
         android:gravity="center_vertical"
