--- a/app_i/src/main/res/layout/activity_sample_news.xml
+++ b/app_i/src/main/res/layout/activity_sample_news.xml
@@ -14,7 +14,7 @@
         <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:id="@+id/layout_inside"
-            tools:context=".SampleNewsActivity"
+            tools:context=".NewsModuleActivity"
             android:orientation="vertical"
             android:gravity="center_horizontal|center_vertical"
             android:layout_gravity="center_horizontal"
