--- a/app_i/src/main/res/layout/activity_basic.xml
+++ b/app_i/src/main/res/layout/activity_basic.xml
@@ -7,7 +7,7 @@
     android:background="#F3F3F3"
     android:gravity="center"
     android:orientation="vertical"
-    tools:context=".TestActivity">
+    tools:context=".BasicActivity">
 
     <Button
         android:id="@+id/btn_to_news"
