--- a/app_i/src/main/res/layout/my_pagers.xml
+++ b/app_i/src/main/res/layout/my_pagers.xml
@@ -10,7 +10,7 @@
         android:id="@+id/idRVItems"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
-
+    <include layout="@layout/error"/>
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
 <!--    <?xml version="1.0" encoding="utf-8"?>-->
 <!--<androidx.constraintlayout.widget.ConstraintLayout-->
