--- a/app_i/src/main/res/menu/noti_menu.xml
+++ b/app_i/src/main/res/menu/noti_menu.xml
@@ -12,7 +12,7 @@
     <item
         android:id = "@+id/action_30"
         app:showAsAction = "never"
-        android:title = "@string/_30_seconds" />
+        android:title = "@string/setting" />
 </menu>
 
 
