--- a/app_i/src/main/res/layout/rv_item.xml
+++ b/app_i/src/main/res/layout/rv_item.xml
@@ -7,6 +7,8 @@
     android:layout_marginEnd="8dp"
     android:layout_marginStart="8dp"
     android:layout_marginTop="8dp"
+    android:clickable="true"
+    app:cardCornerRadius="10dp"
     app:cardBackgroundColor="#fff8e3">
     <RelativeLayout
         android:layout_width="match_parent"
@@ -19,9 +21,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:ellipsize="end"
-        android:maxLines="1"
-
-        android:textSize="18dp"
+        android:maxLines="2"
+        android:textSize="20dp"
         android:text="Category Text"
         android:textColor="#343434"
         android:gravity="center_vertical"
