--- a/app_i/src/main/res/menu/menu_main_news.xml
+++ b/app_i/src/main/res/menu/menu_main_news.xml
@@ -8,7 +8,7 @@
     <item
         android:id = "@+id/action_10"
         app:showAsAction = "never"
-        android:title = "@string/_10_seconds" />
+        android:title = "@string/esm" />
     <item
         android:id = "@+id/action_30"
         app:showAsAction = "never"
