--- a/app_i/src/main/res/layout/rv_item.xml
+++ b/app_i/src/main/res/layout/rv_item.xml
@@ -9,7 +9,7 @@
     android:layout_marginTop="8dp"
     android:clickable="true"
     app:cardCornerRadius="10dp"
-    app:cardBackgroundColor="#fff8e3">
+    app:cardBackgroundColor="#f3f9ff">
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
