--- a/app_i/src/main/res/values/colors.xml
+++ b/app_i/src/main/res/values/colors.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#795548</color>
-    <color name="colorPrimaryDark">#5D4037</color>
-    <color name="colorAccent">#FFEB3B</color>
+    <color name="colorPrimary">#2f2f2f</color>
+    <color name="colorPrimaryDark">#080808</color>
+    <color name="colorAccent">#6f6f6e</color>
 
-    <color name="colorBackground">#BCAAA4</color>
+    <color name="colorBackground">#eaeaea</color>
 </resources>
