--- a/app_i/src/main/res/menu/nav_menu.xml
+++ b/app_i/src/main/res/menu/nav_menu.xml
@@ -1,21 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
-
-    <item android:title="STORAGAE">
-        <menu>
-            <item android:title="@string/my_files"/>
-            <item android:title="@string/shared"/>
-            <item android:title="Starred"/>
-            <item android:title="Recent"/>
-            <item android:title="Backup"/>
-        </menu>
-    </item>
-
-    <item android:title="APP">
-        <menu>
-            <item android:title="Settings"/>
-            <item android:title="Log Out"/>
-        </menu>
-    </item>
-
+    <item android:title="帳號設定"
+        android:icon="@drawable/ic_baseline_settings_24"/>
+    <item android:title="問卷進度"
+        android:icon="@drawable/ic_baseline_analytics_24"/>
+    <item android:title="閱讀紀錄"
+        android:icon="@drawable/ic_baseline_history_24"/>
+    <item android:title="通知時間"
+        android:icon="@drawable/ic_baseline_edit_notifications_24"/>
+    <item android:title="聯絡我們"
+        android:icon="@drawable/ic_baseline_email_24"/>
 </menu>
+<!--<?xml version="1.0" encoding="utf-8"?>-->
+<!--<menu xmlns:android="http://schemas.android.com/apk/res/android">-->
+
+<!--    <item android:title="STORAGAE">-->
+<!--        <menu>-->
+<!--            <item android:title="@string/my_files"/>-->
+<!--            <item android:title="@string/shared"/>-->
+<!--            <item android:title="Starred"/>-->
+<!--            <item android:title="Recent"/>-->
+<!--            <item android:title="Backup"/>-->
+<!--        </menu>-->
+<!--    </item>-->
+<!--    <item android:title="TODO">-->
+<!--        <menu>-->
+<!--            <item android:title="Settings"/>-->
+<!--            <item android:title="Log Out"/>-->
+<!--        </menu>-->
+<!--    </item>-->
+
+<!--</menu>-->
