--- a/surveyandroid/src/main/res/values/styles.xml
+++ b/surveyandroid/src/main/res/values/styles.xml
@@ -1,6 +1,7 @@
 <resources>
 
     <!-- Base application theme. -->
+<!--    <style name="Widget.SurveyAndroid" parent="Theme.MaterialComponents.Light.NoActionBar">-->
     <style name="Widget.SurveyAndroid" parent="Theme.AppCompat.Light.DarkActionBar">
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimary</item>
