--- a/app_i/src/main/res/layout/activity_news_module.xml
+++ b/app_i/src/main/res/layout/activity_news_module.xml
@@ -7,16 +7,16 @@
     android:fitsSystemWindows="true"
     android:id="@+id/layout_outside"
     android:orientation="vertical">
-    <com.google.android.material.appbar.AppBarLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/appbar_layout">
-        <androidx.appcompat.widget.Toolbar
-            android:id="@+id/main_toolbar"
-            android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            android:background="#7b8c9d" />
-    </com.google.android.material.appbar.AppBarLayout>
+<!--    <com.google.android.material.appbar.AppBarLayout-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:id="@+id/appbar_layout">-->
+<!--        <androidx.appcompat.widget.Toolbar-->
+<!--            android:id="@+id/main_toolbar"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="?attr/actionBarSize"-->
+<!--            android:background="#7b8c9d" />-->
+<!--    </com.google.android.material.appbar.AppBarLayout>-->
     <androidx.core.widget.NestedScrollView
         app:layout_behavior = "@string/appbar_scrolling_view_behavior"
         android:id="@+id/scroll_view"
