--- a/app_i/src/main/res/menu/nav_menu.xml
+++ b/app_i/src/main/res/menu/nav_menu.xml
@@ -4,16 +4,16 @@
         android:title="帳號設定"
         android:icon="@drawable/ic_baseline_settings_24"/>
     <item android:id="@+id/nav_progressing"
-        android:title="問卷進度"
+        android:title="問卷進度(db view)"
         android:icon="@drawable/ic_baseline_analytics_24"/>
     <item android:id="@+id/nav_history"
-        android:title="閱讀紀錄"
+        android:title="閱讀紀錄 (noti set)"
         android:icon="@drawable/ic_baseline_history_24"/>
     <item android:id="@+id/nav_reschedule"
-        android:title="通知時間"
+        android:title="通知時間(esm trigger)"
         android:icon="@drawable/ic_baseline_edit_notifications_24"/>
     <item android:id="@+id/nav_contact"
-        android:title="聯絡我們"
+        android:title="聯絡我們(esm)"
         android:icon="@drawable/ic_baseline_email_24"/>
 </menu>
 <!--<?xml version="1.0" encoding="utf-8"?>-->
