--- a/app_i/src/main/res/xml/demo_preference.xml
+++ b/app_i/src/main/res/xml/demo_preference.xml
@@ -4,6 +4,6 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
     <EditTextPreference
         app:key="xxx"
-        app:title="使用者編號"
+        app:title="頁面還沒做"
         app:useSimpleSummaryProvider="true" />
 </PreferenceScreen>
