--- a/app_i/src/main/res/layout/activity_music.xml
+++ b/app_i/src/main/res/layout/activity_music.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#168BC34A"
-    tools:context=".MusicActivity">
+    tools:context=".TestServiceActivity">
 
     <LinearLayout
         android:id="@+id/linearLayout"
