--- a/app_i/src/main/res/layout/activity_esm_json_view.xml
+++ b/app_i/src/main/res/layout/activity_esm_json_view.xml
@@ -6,7 +6,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context=".ESMJsonViewActivity">
+    tools:context=".TestESMJsonViewActivity">
 
 <!--    <ScrollView android:layout_width="match_parent"-->
 <!--        android:layout_height="match_parent"-->
