--- a/app_i/src/main/res/layout/activity_main.xml
+++ b/app_i/src/main/res/layout/activity_main.xml
@@ -21,7 +21,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="com.recoveryrecord.surveyandroid.example.MainActivity">
+    tools:context="com.recoveryrecord.surveyandroid.example.TestActivityRecognitionActivity">
 
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
