--- a/app_i/src/main/res/layout/activity_one_news.xml
+++ b/app_i/src/main/res/layout/activity_one_news.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".NewsOneActivity">
+    tools:context=".TestNewsOneActivity">
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/idRVItems"
         android:layout_width="match_parent"
