--- a/app_i/src/main/res/layout/content_main.xml
+++ b/app_i/src/main/res/layout/content_main.xml
@@ -21,7 +21,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.recoveryrecord.surveyandroid.example.MainActivity"
+    tools:context="com.recoveryrecord.surveyandroid.example.TestActivityRecognitionActivity"
     tools:showIn="@layout/activity_main">
 
     <LinearLayout
@@ -30,7 +30,7 @@
         android:layout_height="match_parent"
         android:id="@+id/sample_main_layout">
         <fragment
-            android:name="com.recoveryrecord.surveyandroid.example.LogFragment"
+            android:name="com.recoveryrecord.surveyandroid.example.TestActivityRecognitionLogFragment"
             android:id="@+id/log_fragment"
             android:layout_weight="4"
             android:layout_width="match_parent"
