--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,7 @@
     android:background="#F3F3F3"
     android:gravity="center"
     android:orientation="vertical"
-    tools:context=".MainActivity">
+    tools:context=".com.recoveryrecord.surveyandroid.example.MainActivity">
 
     <Button
         android:id="@+id/btn_to_news"
