--- a/app_i/src/main/res/layout/content_activity_recognition.xml
+++ b/app_i/src/main/res/layout/content_activity_recognition.xml
@@ -22,7 +22,7 @@
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.recoveryrecord.surveyandroid.example.TestActivityRecognitionActivity"
-    tools:showIn="@layout/activity_main">
+    tools:showIn="@layout/activity_activity_recognition">
 
     <LinearLayout
         android:orientation="vertical"
