--- a/app_i/src/main/res/layout/activity_news_hybrid.xml
+++ b/app_i/src/main/res/layout/activity_news_hybrid.xml
@@ -1,44 +1,57 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.coordinatorlayout.widget.CoordinatorLayout
+<androidx.drawerlayout.widget.DrawerLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/main_content"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fitsSystemWindows="true"
-    tools:context=".NewHybridActivity">
-
-    <com.google.android.material.appbar.AppBarLayout
-        android:id="@+id/appbar"
+    tools:context=".NewsHybridActivity"
+    android:id="@+id/drawer_layout_hy">
+    <androidx.coordinatorlayout.widget.CoordinatorLayout
+        android:id="@+id/main_content_hy"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingTop="@dimen/appbar_padding_top"
-        android:theme="@style/AppTheme.AppBarOverlay">
-        <com.google.android.material.tabs.TabLayout
-            android:id="@+id/tabs"
-            app:tabIndicatorColor="#1e3348"
-            app:tabTextColor="#95a4b3"
-            app:tabIndicatorHeight="0dp"
-            app:tabSelectedTextColor = "#162434"
+        android:layout_height="match_parent">
+        <com.google.android.material.appbar.AppBarLayout
+            android:id="@+id/appbar_hy"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:tabMode="scrollable"
-            app:tabTextAppearance="@style/TabLayoutTextStyle"/>
-    </com.google.android.material.appbar.AppBarLayout>
+            android:layout_height="wrap_content">
+            <androidx.appcompat.widget.Toolbar
+                android:id="@+id/main_toolbar_hy"
+                android:layout_width="match_parent"
+                android:layout_height="?attr/actionBarSize"
+                android:background="@android:color/white" />
+            <com.google.android.material.tabs.TabLayout
+                android:id="@+id/tabs_hy"
+                app:tabIndicatorColor="#1e3348"
+                app:tabTextColor="#95a4b3"
+                app:tabIndicatorHeight="0dp"
+                app:tabSelectedTextColor = "#162434"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:tabMode="scrollable"
+                app:tabTextAppearance="@style/TabLayoutTextStyle"/>
+        </com.google.android.material.appbar.AppBarLayout>
 
-    <androidx.viewpager.widget.ViewPager
-        android:id="@+id/container"
-        android:layout_width="match_parent"
+        <androidx.viewpager.widget.ViewPager
+            android:id="@+id/container_hy"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:layout_behavior="@string/appbar_scrolling_view_behavior" />
+
+    <!--<android.support.design.widget.FloatingActionButton-->
+    <!--    android:id="@+id/fab"-->
+    <!--    android:layout_width="wrap_content"-->
+    <!--    android:layout_height="wrap_content"-->
+    <!--    android:layout_gravity="end|bottom"-->
+    <!--    android:layout_margin="@dimen/fab_margin"-->
+    <!--    app:srcCompat="@android:drawable/ic_dialog_email" />-->
+
+    </androidx.coordinatorlayout.widget.CoordinatorLayout>
+    <com.google.android.material.navigation.NavigationView
+        android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior" />
-
-<!--<android.support.design.widget.FloatingActionButton-->
-<!--    android:id="@+id/fab"-->
-<!--    android:layout_width="wrap_content"-->
-<!--    android:layout_height="wrap_content"-->
-<!--    android:layout_gravity="end|bottom"-->
-<!--    android:layout_margin="@dimen/fab_margin"-->
-<!--    app:srcCompat="@android:drawable/ic_dialog_email" />-->
-
-</androidx.coordinatorlayout.widget.CoordinatorLayout>
+        app:menu="@menu/nav_menu"
+        android:id="@+id/nav_view_hy"
+        android:layout_gravity="start"
+        app:headerLayout="@layout/nav_header_layout" />
+</androidx.drawerlayout.widget.DrawerLayout>
