--- a/app_i/src/main/res/layout/activity_news_hybrid.xml
+++ b/app_i/src/main/res/layout/activity_news_hybrid.xml
@@ -7,6 +7,10 @@
     android:layout_height="match_parent"
     tools:context=".NewsHybridActivity"
     android:id="@+id/drawer_layout_hy">
+    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+        android:id="@+id/mainSwipeContainer"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent">
     <androidx.coordinatorlayout.widget.CoordinatorLayout
         android:id="@+id/main_content_hy"
         android:layout_width="match_parent"
@@ -32,11 +36,11 @@
                 app:tabTextAppearance="@style/TabLayoutTextStyle"/>
         </com.google.android.material.appbar.AppBarLayout>
 
-        <androidx.viewpager.widget.ViewPager
-            android:id="@+id/container_hy"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            app:layout_behavior="@string/appbar_scrolling_view_behavior" />
+            <androidx.viewpager.widget.ViewPager
+                android:id="@+id/container_hy"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                app:layout_behavior="@string/appbar_scrolling_view_behavior" />
 
     <!--<android.support.design.widget.FloatingActionButton-->
     <!--    android:id="@+id/fab"-->
@@ -47,6 +51,7 @@
     <!--    app:srcCompat="@android:drawable/ic_dialog_email" />-->
 
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
+    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
     <com.google.android.material.navigation.NavigationView
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
